# deep-earth-degasation

./: .gitignore  Makefile  README.md  pyproject.toml
configs/: lipetsk_voronezh_dynamic_mvp.template.yaml  lipetsk_voronezh_mvp.yaml
data/context/: weather_events.template.yaml
data/manifests/: prepared_stack_manifest.template.yaml
docs/: composite_based_segmentation_requirements.md  config_driven_run_mvp_requirements.md  methodology.md  mvp_dynamic_pipeline_spec.md  prepared_data_contract.md  stable_candidate_ids_and_label_migration.md  tp09_cropland_refinement_spec.md
examples/: synthetic_candidates.geojson
src/deep_earth_degasation/: __init__.py  cli.py  config.py  scoring.py
src/deep_earth_degasation/anomaly/: __init__.py  composite.py  field_normalization.py  residuals.py
src/deep_earth_degasation/candidates/: dynamic_extractor.py  fusion.py  object_features.py
src/deep_earth_degasation/context/: __init__.py  false_positive.py  fields.py  landcover.py
src/deep_earth_degasation/features/: indices.py  sar.py  spectral.py  thermal.py  types.py  weather.py
tests/: test_candidate_fusion.py  test_candidate_serialization.py  test_cli_static_candidates.py  test_config.py  test_dynamic_artifacts.py  test_dynamic_extractor.py  test_dynamic_features.py  test_dynamic_scoring.py  test_false_positive_filters.py  test_field_context.py  test_field_normalization.py  test_indices.py  test_label_migration.py  test_labeling_export.py  test_learning_dataset_export.py  test_passport_generation.py  test_raster_stack.py  test_residuals.py  test_review_exports.py  test_run_mvp_cli.py  test_scoring.py  test_shape_metrics.py  test_static_detector.py  test_validation_summary.py  test_vector_io.py  test_weather_features.py
(+19 files in other folders)
